# SkyrimAlchemyHelper

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  SAH.qrc  SkyrimAlchemyHelper.pro
ModParser/: Ingredients.cpp  Mod.cpp  Mod.h  ModParser.pro  Parser.cpp  Parser.h  Save.h  StringsTable.cpp  StringsTable.h  main.cpp
cmake/: CompileOptions.cmake  Custom.cmake  FindLZ4.cmake
config/: Effects.txt  Ingredients.txt  Known_Ingredients.txt  Plugins.txt
extlibs/lib/: zlibstatic.lib
gui/: CMakeLists.txt  Config.cpp  Config.h  ConfigDialog.cpp  ConfigDialog.h  ConfigModsParser.cpp  ConfigModsParser.h  ConfigPane.cpp  ConfigPane.h  ContainersWidget.cpp  ContainersWidget.h  DiscoverEffects.cpp  DiscoverEffects.h  EffectsList.cpp  EffectsList.h  EffectsListModel.cpp  EffectsListModel.h  EffectsListWidget.cpp  EffectsListWidget.h  EffectsSelector.cpp  EffectsSelector.h  FiltersWidget.cpp  FiltersWidget.h  FlowLayout.cpp  FlowLayout.h  GameSave.cpp  GameSave.h  IngredientsList.cpp  IngredientsList.h  IngredientsListDelegate.cpp  IngredientsListModel.cpp  IngredientsListModel.h  IngredientsListWidget.cpp  IngredientsListWidget.h  IngredientsSelector.cpp  IngredientsSelector.h  InventoryWidget.cpp  InventoryWidget.h  KnownIngredientsWidget.cpp  KnownIngredientsWidget.h  (+27 more)
gui/icons/: licence.txt
libs/modParser/: BSAFile.cpp  BSAFile.h  CMakeLists.txt  Config.h  ConfigParser.cpp  ConfigParser.h  ContainersParser.cpp  ContainersParser.h  Mod.cpp  Mod.h  ModParser.cpp  ModParser.h  StringsTable.cpp  StringsTable.h
libs/parser/: CMakeLists.txt  Parser.cpp  Parser.h
libs/saveParser/: CMakeLists.txt  Save.cpp  Save.h
modParser/: BSAFile.cpp  BSAFile.h  CMakeLists.txt  Config.h  Ingredients.cpp  Ingredients.h  Mod.cpp  Mod.h  ModParser.cpp  ModParser.h  Save.cpp  StringsTable.cpp  StringsTable.h  main.cpp
parser/: Parser.cpp  Parser.h
saveParser/: CMakeLists.txt  Save.cpp
src/: EffectsList.cpp  EffectsListModel.cpp  EffectsListModel.h  EffectsListWidget.cpp  IngredientsList.cpp  IngredientsList.h  IngredientsListDelegate.h  IngredientsListModel.cpp  IngredientsListModel.h  IngredientsListWidget.cpp  IngredientsListWidget.h  PluginsList.cpp  PluginsList.h  PluginsListModel.cpp  PotionsList.h  PotionsListWidget.cpp  PotionsListWidget.h  SAHDialog.cpp  main.cpp
